[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-task-queue-py"
version = "0.1.0"
description = "Priority queue for agent sub-tasks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "agent", "queue", "tasks", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-task-queue-py"

[tool.setuptools.packages.find]
where = ["src"]
